--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "betterbite",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/nadiaoktarina/project_capstone.git",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
